--- a/service.conf
+++ b/service.conf
@@ -1,11 +1,20 @@
 #service_confing
-[web_service]
-ip=10.0.0.65
-user=root
-passwd=1q2w3e4r
-port=22
+
 [app_service]
 ip=127.0.0.1
 user=root
 passwd=1q2w3e4r
 port=22
+
+[aa_service]
+ip=10.0.0.65
+user=root
+passwd=1q2w3e4r
+port=22
+[bb_service]
+
+ip=192.168.11.30
+user=root
+passwd=1q2w3e4r
+port=22
+
